appId: ${MAESTRO_APP_ID}
tags:
  - bonification
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
  - runScript:
      file: ../common/helpers/generateBonusQFResponse.js
      env:
        user_id: ${output.userId}
        mock_type: 'QUOTIENT_FAMILIAL_TOO_HIGH'
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml

- assertVisible: 'Vérifier maintenant'

- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- assertVisible: 'Bonus de 50 €'

- tapOn: 'Comment ça marche ?'

- scrollUntilVisible:
    element: 'Des questions sur ton crédit ?'

- tapOn: 'Faire une demande de bonus quotient familial'

- assertVisible: 'Quel est ce bonus et comment en bénéficier ?'

- tapOn: '.*Continuer.*'

- assertVisible: 'Munis-toi des informations suivantes pour faire ta demande :'

- tapOn: '.*Commencer.*'

- assertVisible: 'Quels sont les noms et prénoms de ton représentant légal ?'

- tapOn: 'Champs de texte - Prénom - Obligatoire'

- inputText:
    text: ${faker.name().firstName()}

- tapOn: '.*Nom de naissance.*' # afin de perdre le focus du champ de texte

- tapOn: 'Champs de texte - Nom de naissance - Le nom avant tout changement - Obligatoire'

- inputText:
    text: ${faker.name().lastName()}

- tapOn: '.*représentant légal.*'

- tapOn: 'Je ne connais pas son nom de naissance'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- tapOn: 'Continuer vers la civilité'

- assertVisible: 'Quelle est la civilité de ton représentant légal ?'

- tapOn: 'Civilité - Madame - non sélectionné'

- tapOn: 'Continuer vers la date de naissance'

- repeat:
    times: 3
    commands:
      - swipe: # years
          start: 67%, 59%
          end: 67%, 95%

- tapOn: 'Continuer vers le lieu de naissance'

- assertVisible: 'Quel est le lieu de naissance de ton représentant légal ?'

- tapOn: 'Champs de texte - Pays de naissance - Exemple : France - Obligatoire'

- inputText: 'France'

- tapOn: 'Proposition de pays 1 : France'

- tapOn: '.*représentant légal.*'

- tapOn: 'Je ne connais pas son lieu de naissance'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- tapOn: 'Champs de texte - Commune de naissance - Exemple : Paris - Obligatoire'

- inputText: 'Paris'

- tapOn: '.*représentant légal.*'

- tapOn: 'Proposition de ville 1 : Paris (75)'

- tapOn: 'Continuer vers le résumé'

- assertVisible: 'Vérifie les informations avant d’envoyer ta demande'

- scroll

- tapOn: 'Je certifie avoir informé mon parent ou mon représentant légal des données personnelles communiquées.'

- tapOn: 'Confirmer'

- assertVisible: '.*Bonjour.*'

- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- assertVisible: 'Profil'

- scrollUntilVisible:
    element:
      text: 'République Française - Liberté Égalité Fraternité'

- tapOn: 'Déconnexion'

- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'
- tapOn: 'Continuer avec mon e-mail'

- assertVisible: 'Connecte-toi'
- tapOn:
    id: 'Entrée pour l’email'
- inputText: ${output.userEmail}
- tapOn:
    id: 'Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Connecte-toi' # Pour fermer le clavier iOS

- tapOn: 'Se connecter'

- extendedWaitUntil:
    visible: '.*Bonjour.*'
    timeout: 10000

- tapOn: '.*Profil.*'
- tapOn: '.*Accueil.*'

- assertVisible: 'Ton dossier a été refusé.'

- tapOn: 'Voir plus de détails'

- assertVisible: 'Ton dossier est refusé'

- runFlow: ../common/lifecycle/StopApp.yml
