appId: ${MAESTRO_APP_ID}
tags:
  - booking
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml

- assertVisible: 'Rechercher'

- scrollUntilVisible:
    element:
      text: 'Catégorie Médias et presse'
- tapOn: 'Catégorie Médias et presse'

- tapOn: 'Voir tous les filtres : 1 filtre actif'
- tapOn: '.*Catégorie.*'

- assertVisible: 'Médias et presse'
- tapOn: '.*Presse en ligne.*'
- tapOn: 'Appliquer le filtre'

- tapOn: 'Rechercher'

- assertVisible: 'Rechercher'
- swipe:
    from:
      text: 'Les offres'
    direction: UP
- tapOn: 'Abonnement presse en ligne'

- tapOn: 'Réserver l’offre'
- runFlow:
    when:
      visible: 'Détails de la réservation'
    commands:
      - assertVisible: 'Détails de la réservation'
      - tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
      - scrollUntilVisible:
          element: 'Confirmer la réservation'
      - tapOn:
          text: '.*Confirmer la réservation.*'
          retryTapIfNoChange: false
      - assertVisible: "Réservation confirmée\_!"
      - runFlow:
          when:
            platform: iOS
            visible: 'Plus tard'
          commands:
            - tapOn: 'Plus tard'
      - tapOn: 'Voir ma réservation'
      - scrollUntilVisible:
          element: 'Annuler ma réservation'
      - tapOn: 'Annuler ma réservation'
      - runFlow:
          when:
            platform: Android
          commands:
            - tapOn: 'Annuler ma réservation'

      - runFlow: # iOS has an accessibility issue with the "Annuler ma réservation" button, so we need to tap on it with coordinates
          when:
            platform: iOS
          commands:
            - tapOn:
                point: 50%,87%

- runFlow:
    when:
      visible: 'Tu y es presque'
    commands:
      - assertVisible: 'Tu y es presque'
      - tapOn: 'Mettre en favori'

- runFlow: ../common/lifecycle/StopApp.yml
