appId: ${MAESTRO_APP_ID}
tags:
  - booking
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml

- assertVisible: 'Rechercher'
- runFlow:
    when:
      platform: iOS
    commands:
      - scrollUntilVisible:
          element:
            text: 'Catégorie Musique.*'
      - tapOn: 'Catégorie Musique.*'
      - tapOn: 'Sous-catégorie CDs'

- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element:
            text: 'MUSIQUE'
      - tapOn: 'MUSIQUE'
      - tapOn: 'CDs'

- assertVisible: 'Rechercher'
- runFlow:
    when:
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn: 'Localisation – Liste - Élément 3 sur 3 - France entière.*'

- swipe:
    from:
      text: Les offres
    direction: UP

- extractTextWithAI:
    query: "Le titre exacte d'une des offres CD visible dans les résultats de recherche dont le titre n'est pas cropé et ne contient pas de caractères spéciaux."
    outputVariable: 'offerResult'
- tapOn: .*${offerResult}.*

- runFlow:
    when:
      visible: 'Voir ma réservation'
    commands:
      - tapOn: 'Voir ma réservation'
      - scrollUntilVisible:
          element: 'Annuler ma réservation'
      - tapOn: 'Annuler ma réservation' # TODO(PC-36108) améliorer les perfs pour éviter de devoir cliquer deux fois sur ce bouton
      - tapOn: 'Annuler ma réservation'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: sticky-booking-button
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Réserver l’offre'

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element: 'Confirmer la réservation'
- runFlow:
    when:
      platform: iOS
    commands:
      - scroll
- doubleTapOn: '.*Confirmer la réservation.*'

- assertVisible: "Réservation confirmée\_!"

- tapOn: 'Voir ma réservation'
- tapOn:
    text: 'Voir ma réservation'
    optional: true

- runFlow:
    when:
      platform: iOS
      visible: 'Plus tard'
    commands:
      - tapOn: 'Plus tard'

- scrollUntilVisible:
    element: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Annuler ma réservation'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: 50%,87%

- runFlow: ../common/lifecycle/StopApp.yml
