appId: ${MAESTRO_APP_ID}
tags:
  - booking
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml

- assertVisible: 'Rechercher'

- runFlow:
    when:
      platform: iOS
    commands:
      - scrollUntilVisible:
          element:
            text: 'Catégorie livre.*'
      - tapOn: 'Catégorie livre.*'
      - tapOn: 'Sous-catégorie Romans & littérature'

- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element:
            text: 'LIVRES'
      - tapOn: 'LIVRES'
      - tapOn: 'Romans.*'

- runFlow:
    when:
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn: 'Localisation – Liste - Élément 3 sur 3 - France entière.*'

- tapOn: 'Voir tous les filtres : 1 filtre actif'
- tapOn: '.*Catégorie.*'

- tapOn: '.*Romance.*'
- tapOn: 'Appliquer le filtre'
- tapOn: 'Rechercher'

- swipe:
    from:
      text: Les offres
    direction: UP

- assertVisible: 'Rechercher'
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          text: 'Livre'
          index: 0

- runFlow:
    when:
      platform: iOS
    commands:
      - scroll
      - extractTextWithAI:
          query: "Le titre exacte d'une des offres Livre visible dans les résultats de recherche"
          outputVariable: 'offerResult'
      - tapOn: .*${offerResult}.*

- waitForAnimationToEnd

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Réserver l’offre'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Réserver l’offre'

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element: 'Confirmer la réservation'
- runFlow:
    when:
      platform: iOS
    commands:
      - scroll

- tapOn:
    text: '.*Confirmer la réservation.*'
    retryTapIfNoChange: false

- assertVisible: "Réservation confirmée\_!"
- runFlow:
    when:
      platform: iOS
      visible: 'Plus tard'
    commands:
      - tapOn: 'Plus tard'

- tapOn: 'Voir ma réservation'

- scrollUntilVisible:
    element: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Annuler ma réservation'

- runFlow: # iOS has an accessibility issue with the "Annuler ma réservation" button, so we need to tap on it with coordinates
    when:
      platform: iOS
    commands:
      - tapOn:
          point: 50%,87%

- runFlow: ../common/lifecycle/StopApp.yml
