appId: ${MAESTRO_APP_ID}
---
- assertVisible:
    id: 'Profil - non complété'
    enabled: true

- assertVisible: "Identification - indisponible tant que l‘étape précédente n‘est pas complétée"

- assertVisible: "Confirmation - indisponible tant que l‘étape précédente n‘est pas complétée"

- tapOn: 'Profil - non complété'

- tapOn: 'Champs de texte - Prénom - Obligatoire'

- inputText:
    text: '1'

- tapOn: 'Champs de texte - Nom - Obligatoire'
- tapOn: 'Champs de texte - Nom - Obligatoire'

- inputText:
    text: '('

- tapOn: 'Champs de texte - Prénom - Obligatoire - Ce champ ne doit pas contenir de chiffres. - Ce champ ne doit pas contenir de chiffres.'

- pressKey: backspace

- inputText:
    text: ${faker.name().firstName()}

- tapOn: 'Champs de texte - Nom - Obligatoire - Ce champ contient des caractères invalides. - Ce champ contient des caractères invalides.'

- pressKey: backspace

- inputText:
    text: ${faker.name().lastName()}

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard

- tapOn: 'Continuer vers la ville de résidence'

- tapOn: 'Champs de texte - Indique ton code postal et choisis ta ville - Exemple : 75017'

- inputText:
    text: '670000'

- assertVisible: 'Champs de texte - Indique ton code postal et choisis ta ville - Exemple : 75017 - Ce code postal est introuvable. Réessaye un autre code postal ou renseigne un arrondissement (ex: 75001).'

- tapOn: '670000'

- pressKey: backspace

- tapOn: 'Proposition de ville 1 : Strasbourg'

- tapOn: 'Continuer vers l’adresse'

- tapOn: 'Champs de texte - Recherche et sélectionne ton adresse - Exemple : 34 avenue de l’Opéra - Ton adresse ne doit pas contenir de caractères spéciaux ou n’être composée que d’espaces.'

- inputText:
    text: ${faker.address().streetAddress()}

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard

- runFlow:
    when:
      visible: 'Continuer vers le numéro de téléphone'
    commands:
      - tapOn: 'Continuer vers le numéro de téléphone'
      - tapOn: 'Champs de texte - Numéro de téléphone - Exemple : +33639980123'
      - inputText:
          text: '1234567891'
      - assertVisible: '.*Le numéro de téléphone est trop long.*'
      - tapOn: '1234567891'
      - repeat:
          times: 9
          commands:
            - pressKey: backspace
      - inputText:
          text: '06'
      - inputRandomNumber:
          length: 6
      - runFlow:
          when:
            platform: Android
          commands:
            - hideKeyboard
      - runFlow:
          when:
            platform: iOS
          commands:
            - tapOn: 'Next'
      - assertVisible:
          id: 'Continuer vers l’étape suivante'
          enabled: true
      - tapOn: 'Continuer vers l’étape suivante'

- runFlow:
    when:
      visible: 'Continuer vers le statut'
    commands:
      - tapOn: 'Continuer vers le statut'

- tapOn: 'Statut - Employé - non sélectionné'

- tapOn: 'Continuer vers l’étape suivante'

- runFlow:
    when:
      true: ${user_age >= 18}
    commands:
      - tapOn: 'Modifier mes informations'
      - tapOn: 'Continuer vers la ville de résidence'
      - tapOn: 'Continuer vers l’adresse'
      - tapOn: 'Continuer vers le numéro de téléphone'
      - tapOn: 'Continuer vers l’étape suivante'
      - tapOn: 'Continuer vers l’étape suivante'

- tapOn: 'Confirmer et envoyer les informations'
