appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- scrollUntilVisible:
    element:
      text: 'Autres'
- runFlow:
    when:
      visible: 'Poser une question'
    commands:
      - tapOn: 'Poser une question'
      - assertVisible: 'Assistant virtuel du pass culture'
      - runFlow:
          when:
            platform: Android
          commands:
            - pressKey: back

      - runFlow:
          when:
            platform: iOS
          commands:
            - tapOn: 'Revenir en arrière'
      - assertVisible: 'Poser une question'

- runFlow: ../common/lifecycle/StopApp.yml
